Added more detailed descriptions to error codes and more debugging output, like HTTP headers
Fixed special cases when no exception was throwed, just status code.
Improved wraping for backtrace in error pages.

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1099077 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/public/stylesheets/compiled/application.css
+++ b/server/public/stylesheets/compiled/application.css
@@ -667,3 +667,11 @@ h3.description {
   font-size : 70%;
   color : #ccc;
 }
+
+pre {
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
