Create the correct HREF for loadbalancers.
Due to what I suppose was a rogue copy-n-paste, the HREF in
the XML output from a loadbalancer pointed to a key URL, not
a load_balancer URL.  Fix that here.

Signed-off-by: Chris Lalancette <clalance@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1099607 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/load_balancers/show.xml.haml
+++ b/server/views/load_balancers/show.xml.haml
@@ -1,6 +1,6 @@
 - unless defined?(partial)
   !!! XML
-%load_balancer{ :href => key_url(@load_balancer.id), :id => @load_balancer.id}
+%load_balancer{ :href => load_balancer_url(@load_balancer.id), :id => @load_balancer.id}
   %actions
     %link{ :rel => "destroy", :method => "delete", :href => destroy_load_balancer_url(@load_balancer.id)}
   %public_addresses
