Fix key/user+password listings
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1128231 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/index.xml.haml
+++ b/server/views/instances/index.xml.haml
@@ -23,3 +23,16 @@
       %private_addresses
         - instance.private_addresses.each do |address|
           %address  #{address}
+      - if driver_has_auth_features?
+        %authentication{ :type => driver_auth_feature_name }
+          - if instance.authn_feature_failed?
+            %error  #{instance.authn_error}
+          - else
+            - if driver_auth_feature_name == 'password'
+              %login
+                %username #{instance.username}
+                %password #{instance.password}
+            - if driver_auth_feature_name == 'key'
+              %login
+                %keyname #{instance.keyname}
+
