Unified way how we generate index output using partial render
Signed-off-by: Michal fojtik <mfojtik@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1131025 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/buckets/index.xml.haml
+++ b/server/views/buckets/index.xml.haml
@@ -1,8 +1,4 @@
-!!! XML
+!!!XML
 %buckets
-  - @elements.each do |bucket|
-    %bucket{:href => bucket_url(bucket.id), :id => bucket.id}
-      - bucket.attributes.select{ |attr| attr!=:id }.each do |attribute|
-        - haml_tag("#{attribute}".tr('-', '_'), :<) do
-          - haml_concat bucket.send(attribute)
-
+  - @elements.each do |c|
+    = haml :'buckets/show', :locals => { :@bucket => c, :partial => true }
