--- a/server/views/realms/index.xml.haml
+++ b/server/views/realms/index.xml.haml
@@ -1,10 +1,4 @@
 !!!XML
 %realms
-  - @elements.each do |realm|
-    %realm{:href => realm_url(realm.id), :id => realm.id }
-      %name<
-        =realm.name
-      %state<
-        =realm.state
-      %limit<
-        =realm.limit.eql?(:unlimited) ? '' : realm.limit
+  - @elements.each do |c|
+    = haml :'realms/show', :locals => { :@realm => c, :partial => true }
