--- a/server/views/buckets/show.xml.haml
+++ b/server/views/buckets/show.xml.haml
@@ -1,8 +1,10 @@
-!!! XML
+- unless defined?(partial)
+  !!! XML
 %bucket{:href => bucket_url(@bucket.id), :id => @bucket.id}
   - @bucket.attributes.select{ |attr| attr!=:id }.each do |attribute|
     - unless attribute == :blob_list
       -haml_tag(attribute, :<) do
         - haml_concat @bucket.send(attribute)
-  - @bucket.blob_list.each do |blb|
-    %blob{:id => blb, :href => bucket_url(@bucket.id) +"/#{blb}"}
+  - if @bucket.blob_list
+    - @bucket.blob_list.each do |blb|
+      %blob{:id => blb, :href => bucket_url(@bucket.id) +"/#{blb}"}
