--- a/server/views/images/index.xml.haml
+++ b/server/views/images/index.xml.haml
@@ -1,14 +1,5 @@
-!!! XML
+- unless defined?(partial)
+  !!! XML
 %images
-  - @elements.each do |image|
-    %image{:href => image_url(image.id), :id => image.id}
-      - image.attributes.select{ |attr| attr!=:id }.each do |attribute|
-        - haml_tag("#{attribute}".tr('-', '_'), :<) do
-          - if [:name, :description].include?(attribute)
-            =cdata do
-              - haml_concat image.send(attribute)
-          - else
-            - haml_concat image.send(attribute)
-      %actions
-        %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{image.id}"}
-
+  - @elements.each do |c|
+    = haml :'images/show', :locals => { :@image => c, :partial => true }
