--- a/server/views/images/show.xml.haml
+++ b/server/views/images/show.xml.haml
@@ -1,4 +1,5 @@
-!!! XML
+- unless defined?(partial)
+  !!! XML
 %image{:href => image_url(@image.id), :id => @image.id}
   - @image.attributes.select{ |attr| attr!=:id }.each do |attribute|
     - haml_tag(attribute, :<) do
