--- a/server/views/instances/index.xml.haml
+++ b/server/views/instances/index.xml.haml
@@ -1,38 +1,4 @@
 !!! XML
 %instances
-  - @elements.each do |instance|
-    %instance{:href => instance_url(instance.id), :id => instance.id}
-      %name #{instance.name}
-      %owner_id #{instance.owner_id}
-      %image{:href => image_url(instance.image_id), :id => instance.image_id }
-      %realm{:href => realm_url(instance.realm_id), :id => instance.realm_id }
-      %state #{instance.state}
-      - haml_tag :"hardware_profile", { :id => instance.instance_profile.id, :href => hardware_profile_url(instance.instance_profile.id)} do
-        - instance.instance_profile.overrides.each do |p, v|
-          %property{:kind => 'fixed', :name => p, :value => v, :unit => Deltacloud::HardwareProfile::unit(p)}
-      %actions
-        - instance.actions.compact.each do |action|
-          %link{:rel => action, :href => self.send("#{action}_instance_url", instance.id), :method => instance_action_method(action)}
-        - if driver.respond_to?(:run_on_instance)
-          %link{:rel => 'run', :method => :post, :href => run_instance_url(instance.id)}
-        - if instance.can_create_image?
-          %link{:rel => 'create_image', :method => :post, :href => "#{create_image_url};instance_id=#{instance.id}"}
-      %public_addresses
-        - instance.public_addresses.each do |address|
-          %address  #{address}
-      %private_addresses
-        - instance.private_addresses.each do |address|
-          %address  #{address}
-      - if driver_has_auth_features?
-        %authentication{ :type => driver_auth_feature_name }
-          - if instance.authn_feature_failed?
-            %error  #{instance.authn_error}
-          - else
-            - if driver_auth_feature_name == 'password'
-              %login
-                %username #{instance.username}
-                %password #{instance.password}
-            - if driver_auth_feature_name == 'key'
-              %login
-                %keyname #{instance.keyname}
-
+  - @elements.each do |c|
+    = haml :'instances/show', :locals => { :@instance => c, :partial => true }
