--- a/server/views/storage_snapshots/index.xml.haml
+++ b/server/views/storage_snapshots/index.xml.haml
@@ -1,7 +1,4 @@
 !!!XML
 %storage_snapshots
-  - @elements.each do |snapshot|
-    %storage_snapshot{ :href => storage_snapshot_url(snapshot.id), :id => snapshot.id }
-      %created<
-        =snapshot.created
-      %storage_volume{ :href => storage_volume_url(snapshot.storage_volume_id), :id => snapshot.storage_volume_id }
+  - @elements.each do |c|
+    = haml :'storage_snapshots/show', :locals => { :@storage_snapshot => c, :partial => true }
