Updated all views and Rabbit to use api_url_for instead of url_for.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1132944 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -4,7 +4,7 @@
 %ul
   - @collections.sort_by { |k| k.to_s }.each do |key|
     %li
-      = link_to key.to_s.gsub('_', ' ').titlecase, url_for("/api/#{key}")
+      = link_to key.to_s.gsub('_', ' ').titlecase, api_url_for(key)
       %dl
         - collections[key].operations.each_key do |op|
           - next if [:index, :show].include?(op)
