--- a/server/views/buckets/index.html.haml
+++ b/server/views/buckets/index.html.haml
@@ -2,7 +2,7 @@
   Buckets
 %br
 %p
-  =link_to 'Create new bucket', "/api/buckets/new"
+  =link_to 'Create new bucket', api_url_for("buckets/new")
 
 %table.display
   %thead
