--- a/server/views/images/show.html.haml
+++ b/server/views/images/show.html.haml
@@ -18,4 +18,4 @@
       = @image.description
     %dt
     %dd
-      = link_to 'Launch', "/api/instances/new?image_id=#{@image.id}"
+      = link_to 'Launch', api_url_for("instances/new?image_id=#{@image.id}")
