--- a/server/views/load_balancers/index.html.haml
+++ b/server/views/load_balancers/index.html.haml
@@ -29,5 +29,5 @@
   %tfoot
     %tr
       %td{:colspan => 6, :style => "text-align:right;"}
-        =link_to 'Create &raquo;', "#{url_for('/api/load_balancers/new')}", :class => 'button'
+        =link_to 'Create &raquo;', "#{api_url_for('load_balancers/new')}", :class => 'button'
 
