--- a/server/views/load_balancers/new.html.haml
+++ b/server/views/load_balancers/new.html.haml
@@ -1,6 +1,6 @@
 %h1 New Load Balancer
 
-%form{ :action => '/api/load_balancers', :method => :post }
+%form{ :action => load_balancers_url, :method => :post }
   %p
     %label
       Name:
