--- a/server/views/storage_snapshots/new.html.haml
+++ b/server/views/storage_snapshots/new.html.haml
@@ -1,6 +1,6 @@
 %h1 Create new storage volume snapshot
 
-%form{ :action => '/api/storage_snapshots', :method => :post }
+%form{ :action => storage_snapshots_url, :method => :post }
   %p
     %label
       Volume ID:
