--- a/server/views/storage_volumes/new.html.haml
+++ b/server/views/storage_volumes/new.html.haml
@@ -1,6 +1,6 @@
 %h1 Create new storage volume
 
-%form{ :action => '/api/storage_volumes', :method => :post }
+%form{ :action => storage_volumes_url, :method => :post }
   %p
     %label
       Snapshot ID:
