--- a/server/views/instance_states/show.html.haml
+++ b/server/views/instance_states/show.html.haml
@@ -1,7 +1,7 @@
 %h1 Instance States
 
 %div#state_graph
-  = image_tag url_for( '/api/instance_states?format=png' )
+  = image_tag api_url_for('instance_states?format=png')
 
 %table.states
   %thead
