--- a/server/views/keys/new.html.haml
+++ b/server/views/keys/new.html.haml
@@ -1,6 +1,6 @@
 %h1 New key
 
-%form{ :action => '/api/keys', :method => :post }
+%form{ :action => keys_url, :method => :post }
   %p
     %label
       Name:
