Add (optional) constraints to features.
This is useful for defining something like a maximum length
of a parameter.

Signed-off-by: Chris Lalancette <clalance@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1132998 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/api/show.xml.haml
+++ b/server/views/api/show.xml.haml
@@ -3,3 +3,5 @@
     %link{ :rel=>entry_point[0], :href=>entry_point[1] }
       - for feature in driver.features(entry_point[0])
         %feature{ :name=>feature.name }
+          - for name,value in feature.constraints
+            %constraint{ :name=>name, :value=>value }
