load_balancers: advertise the 'register' action
Fixes https://issues.apache.org/jira/browse/DTACLOUD-36

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1133843 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/load_balancers/show.xml.haml
+++ b/server/views/load_balancers/show.xml.haml
@@ -3,6 +3,7 @@
 %load_balancer{ :href => load_balancer_url(@load_balancer.id), :id => @load_balancer.id}
   %actions
     %link{ :rel => "destroy", :method => "delete", :href => destroy_load_balancer_url(@load_balancer.id)}
+    %link{ :rel => "register", :method => "post", :href => register_load_balancer_url(@load_balancer.id)}
   %public_addresses
     - @load_balancer.public_addresses.each do |address|
       %address #{address}
@@ -18,4 +19,3 @@
     - @load_balancer.instances.each do |instance|
       %instance{:href => instance_url(instance.id), :id => instance.id}
         %link{:rel => "unregister", :href => unregister_load_balancer_url(@load_balancer.id, { :instance_id => instance.id})}
-
