Restores delete firewall rule semantics:
DELETE /api/firewalls/:firewall/:rule_id

Also, exposes URI for each firewall rule in
returned XML.

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1145498 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/firewalls/show.html.haml
+++ b/server/views/firewalls/show.html.haml
@@ -36,9 +36,8 @@
             type: #{source[:type]}, family: #{source[:family]}, address: #{source[:address]}, prefix: #{source[:prefix]}
             %br
       %dd
-        %form{ :action => "#{firewall_url(@firewall.name)}/rule", :method => :post}
+        %form{ :action => "#{firewall_url(@firewall.name)}/#{rule.id}", :method => :post}
           %input{:type => "hidden", :name => "_method", :value => "delete"}
-          %input{:type => "hidden", :name => "rule_id", :value => rule.id}
           %input{:type => :submit, :value => "Delete Rule"}
   %dd
     = link_to_action 'Delete Firewall', destroy_firewall_url(@firewall.name), :delete
