Added destroy method for image for VSphere and EC2
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1147018 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/images/show.html.haml
+++ b/server/views/images/show.html.haml
@@ -19,3 +19,4 @@
     %dt
     %dd
       = link_to 'Launch', api_url_for("instances/new?image_id=#{@image.id}")
+      = link_to_action 'Destroy', destroy_image_url(@image.id), :delete
