Added new text filed to input Base64 encoded field in new instance UI
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1148751 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/new.html.haml
+++ b/server/views/instances/new.html.haml
@@ -27,6 +27,11 @@
         %option
         - @load_balancers.each do |load_balancer|
           %option{:value => load_balancer.id} #{load_balancer.id}
+  -if driver_has_feature?(:user_data)
+    %p
+      %label
+        User data (Base64):
+      %textarea{:name => :user_data, :cols => 60, :rows => 10, :placeholder => "Copy&Paste a Base64 string here..."}
   -if driver_has_feature?(:authentication_key)
     %p
       %label
