Fix typo in html interface for index of images - filter by 'owner_id'
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1148825 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/images/show.html.haml
+++ b/server/views/images/show.html.haml
@@ -9,7 +9,7 @@
       = @image.name
     %dt Owner
     %dd
-      = link_to @image.owner_id, image_url( :owner_id => @image.owner_id )
+      = link_to @image.owner_id, images_url + "?owner_id=#{@image.owner_id}"
     %dt Architecture
     %dd
       = @image.architecture
