--- a/server/views/images/index.html.haml
+++ b/server/views/images/index.html.haml
@@ -19,7 +19,7 @@
         %td
           = image.name
         %td
-          = link_to image.owner_id, images_url
+          = link_to image.owner_id, images_url + "?owner_id=#{image.owner_id}"
         %td
           = image.description
 
