--- a/server/views/errors/502.xml.haml
+++ b/server/views/errors/502.xml.haml
@@ -2,6 +2,6 @@
   %kind backend_error
   %backend{ :driver => driver_symbol }
     %code= @error.code
-    - if @error.details
+    - if @error.respond_to?(:details) && @error.details
       %details< #{cdata @error.details.join("\n")}
   %message< #{cdata @error.message}
